modified bottom contact banner styling to fix dynamic viewport height changes on mobile browsers, updated readme image

--- a/source/css/footer.css
+++ b/source/css/footer.css
@@ -67,6 +67,7 @@
 .lowerContainer{
     background-color: #4b464c;
     color: white;
+    padding-bottom: 83px;
 }
 
 .linkToWhite{
